# complex-event-processing-engine

./: .env  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMPLETION_SUMMARY.md  EXTERNAL_INTERFACES.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  TEST_RESULTS.md  ast_engine.py  context.py  event_bus.py  events.py  example_nl_parser.py  example_usage.py  indicator_meta.py  package-lock.json  package.json  pyproject.toml  pytest.ini  rebalance_engine.py  rebalance_handler.py  rebalance_triggers.py  reminder.txt  triggers.py
adapters/: __init__.py  config_source.py  contract_config.py  flask_app.py  frontend_api.py  market_gateway.py  order_gateway.py  price_service.py  xt_connection_manager.py  xt_order_service.py  xt_query_service.py
agent_skills/: quant-research-loop.md
backtest/: README.md  __init__.py  aggregation.py  broker.py  engine.py  models.py  parser.py  portfolio.py  preset_strategies.py  queue.py  recorder.py  rules.py  trade_log.py
cep/: __init__.py
config/: strategy_config.json
ctp_flow/: TradingDay.con
ctp_package/: ThostFtdcTraderApi.h  ThostFtdcUserApiStruct.h
data_provider/: __init__.py  adjusted_main_contract_csv.py  stock_index.py  stock_index.sqlite  tushare_data.py
database/: __init__.py  config.py  dao.py  init_db.py  models.py  schema.sql
docs/: CODE_STRATEGY_GUIDE.md  CONFIG_LOADER_GUIDE.md  DIRECTORY_STRUCTURE.md  INTEGRATION_GUIDE.md  INTEGRATION_INTERFACES.md  JSON_RULE_SPECIFICATION.md  NL_PARSER_README.md  RULE_EVOLUTION_ROADMAP.md  TARGET_ALLOCATION_UI_GUIDE.md  USER_SIGNAL_GUIDE.md  XT_SDK_SETUP.md
examples/: __init__.py  ast_strategy_backtest_example.py  backtest_example.py  config_loader_example.py  ctp_deviation_trigger_example.py  ctp_market_gateway_example.py  example_usage.py  full_integration_example.py  fund_flow_example.py  position_source_example.py  run_ui_server.py  tushare_pbx_ma_backtest_example.py  user_signal_backtest_example.py
frontend/: App.vue  (+17 more)
(+123 files in other folders)
