[project]
name = "complex-event-processing-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.50.0",
    "openctp-ctp==6.7.11.0",
    "pytest>=8.4.2",
    "pyright>=1.1.408",
    "ruff>=0.15.9",
    "flask>=3.0.0",
    "pymysql>=1.1.0",
    "tushare>=1.4.29",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["adapters", "backtest", "cep", "data_provider", "examples", "nlp", "rebalance", "tests"]
extraPaths = ["."]
pythonVersion = "3.13"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
