[project]
name = "complex-event-processing-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "anthropic>=0.50.0",
    "openctp-ctp==6.7.10.0 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "pytest>=8.4.2",
    "pyright>=1.1.408",
    "ruff>=0.15.9",
    "flask>=3.0.0",
    "pymysql>=1.1.0",
    "requests>=2.33.1",
    "redis>=7.4.0",
    "tushare>=1.4.29",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
utility = [
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["adapters", "backtest", "cep", "data_provider", "examples", "nlp", "rebalance", "scripts", "tests"]
exclude = ["lib"]
extraPaths = ["."]
stubPath = "typings"
pythonVersion = "3.12"
reportMissingModuleSource = "none"

[tool.ruff]
exclude = ["archive", "examples/market_data_demo.py"]

[tool.ruff.lint.per-file-ignores]
"services/run_market_node.py" = ["E402"]
"services/run_trading_node.py" = ["E402"]
"services/run_web_node.py" = ["E402"]
"services/run_xuntou_market_node.py" = ["E402"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
